Bar can be removed, hardcoded.

--- a/BarCharts/BarChart.html
+++ b/BarCharts/BarChart.html
@@ -7,4 +7,4 @@
 <h1>Simple barchart</h1>
 <p>This page contains a simple barchart with no options of interaction.</p>
 
-<script src="CreateBarChart.js"></script>
+<script src="BarChart.js"></script>
