--- a/BarCharts/BarChart.html
+++ b/BarCharts/BarChart.html
@@ -4,5 +4,6 @@
     <link rel="stylesheet" type="text/css" href="barchart.css">
     <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 </head>
-
+<body>
 <script src="BarChart.js"></script>
+</body>
