Simple answer form added, no value catch.

--- a/BarCharts/BarChart.html
+++ b/BarCharts/BarChart.html
@@ -6,4 +6,32 @@
 </head>
 <body>
 <script src="BarChart.js"></script>
+<br /><br /><br /><br />
+
+<form>
+    <table cellpadding="10">
+        <tr>
+            <td valign="top">
+                Which datapoint is smaller?
+            </td>
+            <td>
+                <input type="radio" name="Department" value="PAX"> PAX<br />
+                <input type="radio" name="Department" value="Procurement"> Procurement
+            </td>
+        </tr>
+        <tr>
+            <td>
+                How many percent is the smaller in size of the bigger?
+            </td>
+            <td>
+                <input type="text" name="sizeOf"maxlength="3" size="3">%
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <input type="submit">
+            </td>
+        </tr>
+    </table>
+</form>
 </body>
